--- a/wetin/public/index.html
+++ b/wetin/public/index.html
@@ -5,9 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Music box criado para a matéria de pesquisa e inovação dasptech" />
+  <meta name="description" content="WeTin uma plataforma onde ajudamos a encontrar seu emprego" />
   <title>WeTin</title>
-  <link rel="stylesheet" href="/src/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
