@MtSanti Começando pag Login

--- a/wetin/public/index.html
+++ b/wetin/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="WeTin uma plataforma onde ajudamos a encontrar seu emprego" />
+  <meta name="description" content="WeTin, uma plataforma onde ajudamos a encontrar seu emprego" />
   <title>WeTin</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
